{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 44,
  "lineage": "dc896b7f-b443-1be6-fb99-fdfdf7b067ca",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056b1936002ca8ede",
            "arn": "arn:aws:ec2:us-east-2:808449850312:instance/i-042e804f29339aa5c",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-042e804f29339aa5c",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0582044251a0e0aad",
            "private_dns": "ip-10-0-101-248.us-east-2.compute.internal",
            "private_ip": "10.0.101.248",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a1710c86f582fb55",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d283e8237730e503",
            "tags": {
              "environment": "dev",
              "project": "my-project"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04acff0707657f9a2"
            ]
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-056b1936002ca8ede",
            "arn": "arn:aws:ec2:us-east-2:808449850312:instance/i-0c29ef1675fc0d692",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c29ef1675fc0d692",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-060b7a6ea9cab6c59",
            "private_dns": "ip-10-0-102-158.us-east-2.compute.internal",
            "private_ip": "10.0.102.158",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-087698a817afa2330",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-08ac8e9365f96c74d",
            "tags": {
              "environment": "dev",
              "project": "my-project"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-04acff0707657f9a2"
            ]
          },
          "dependencies": [
            "data.aws_ami.amazon_linux",
            "data.aws_availability_zones.available",
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:808449850312:security-group/sg-04acff0707657f9a2",
            "description": "Security group for web-servers with HTTP ports open within VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04acff0707657f9a2",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.1.0/24",
                  "10.0.2.0/24"
                ],
                "description": "JMX",
                "from_port": 1099,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1099
              },
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "web-sg-my-project-dev-20220104024231107900000001",
            "name_prefix": "web-sg-my-project-dev-",
            "owner_id": "808449850312",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg-my-project-dev",
              "environment": "dev",
              "project": "my-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-037b9abdea1038c8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.app_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-3494520463",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04acff0707657f9a2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.app_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-2467217438",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04acff0707657f9a2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "description": "HTTP",
            "from_port": 8080,
            "id": "sgrule-554007215",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04acff0707657f9a2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-4056500108",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04acff0707657f9a2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.1.0/24",
              "10.0.2.0/24"
            ],
            "description": "JMX",
            "from_port": 1099,
            "id": "sgrule-2673492692",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-04acff0707657f9a2",
            "self": false,
            "source_security_group_id": null,
            "to_port": 1099,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.app_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 0,
            "id": "sgrule-2959922872",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-04acff0707657f9a2",
            "self": true,
            "source_security_group_id": "sg-04acff0707657f9a2",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.app_security_group.module.sg.aws_security_group.this",
            "module.app_security_group.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.elb_http.module.elb",
      "mode": "managed",
      "type": "aws_elb",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:808449850312:loadbalancer/lb-vpH-my-project-dev",
            "availability_zones": [
              "us-east-2a",
              "us-east-2b"
            ],
            "connection_draining": false,
            "connection_draining_timeout": 300,
            "cross_zone_load_balancing": true,
            "dns_name": "lb-vpH-my-project-dev-91113326.us-east-2.elb.amazonaws.com",
            "health_check": [
              {
                "healthy_threshold": 3,
                "interval": 10,
                "target": "HTTP:80/index.html",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "lb-vpH-my-project-dev",
            "idle_timeout": 60,
            "instances": [
              "i-042e804f29339aa5c",
              "i-0c29ef1675fc0d692"
            ],
            "internal": false,
            "listener": [
              {
                "instance_port": 80,
                "instance_protocol": "http",
                "lb_port": 80,
                "lb_protocol": "http"
              }
            ],
            "name": "lb-vpH-my-project-dev",
            "security_groups": [
              "sg-0b721c2b9998edc70"
            ],
            "source_security_group": "808449850312/lb-sg-my-project-dev-20220104024231107900000002",
            "source_security_group_id": "sg-0b721c2b9998edc70",
            "subnets": [
              "subnet-004a18ddf192f0d93",
              "subnet-0e9ea73ff8350af9f"
            ],
            "tags": {
              "Name": "lb-vpH-my-project-dev",
              "environment": "dev",
              "project": "my-project"
            },
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.lb_id",
            "data.aws_availability_zones.available",
            "module.lb_security_group.module.sg.aws_security_group.this",
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.lb_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:808449850312:security-group/sg-0b721c2b9998edc70",
            "description": "Security group for load balancer with HTTP ports open within VPC",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "All protocols",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b721c2b9998edc70",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "JMX",
                "from_port": 1099,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1099
              },
              {
                "cidr_blocks": [],
                "description": "Ingress Rule",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "lb-sg-my-project-dev-20220104024231107900000002",
            "name_prefix": "lb-sg-my-project-dev-",
            "owner_id": "808449850312",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "lb-sg-my-project-dev",
              "environment": "dev",
              "project": "my-project"
            },
            "timeouts": null,
            "vpc_id": "vpc-037b9abdea1038c8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.lb_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": 0,
            "id": "sgrule-2527851058",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b721c2b9998edc70",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_security_group.module.sg.aws_security_group.this",
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.lb_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-1012680536",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b721c2b9998edc70",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_security_group.module.sg.aws_security_group.this",
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 8080,
            "id": "sgrule-2536554051",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b721c2b9998edc70",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this",
            "module.lb_security_group.module.sg.aws_security_group.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-1022975425",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b721c2b9998edc70",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.lb_security_group.module.sg.aws_security_group.this",
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "JMX",
            "from_port": 1099,
            "id": "sgrule-786986095",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0b721c2b9998edc70",
            "self": false,
            "source_security_group_id": null,
            "to_port": 1099,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.lb_security_group.module.sg.aws_security_group.this",
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.lb_security_group.module.sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_self",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [],
            "description": "Ingress Rule",
            "from_port": 0,
            "id": "sgrule-2881230356",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0b721c2b9998edc70",
            "self": true,
            "source_security_group_id": "sg-0b721c2b9998edc70",
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.lb_security_group.module.sg.aws_security_group.this",
            "module.lb_security_group.module.sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-066e78896819d398e",
            "domain": "vpc",
            "id": "eipalloc-0d3a379860a642c93",
            "network_border_group": "us-east-2",
            "network_interface": "eni-0d9ae27e0b85ad49f",
            "private_dns": "ip-10-0-1-206.us-east-2.compute.internal",
            "private_ip": "10.0.1.206",
            "public_dns": "ec2-3-20-95-111.us-east-2.compute.amazonaws.com",
            "public_ip": "3.20.95.111",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc-my-project-dev-us-east-2a",
              "environment": "dev",
              "project": "my-project"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "association_id": "eipassoc-086eb670b0e95adad",
            "domain": "vpc",
            "id": "eipalloc-094c5f4eb34815bde",
            "network_border_group": "us-east-2",
            "network_interface": "eni-02fd58355e4415cdc",
            "private_dns": "ip-10-0-2-72.us-east-2.compute.internal",
            "private_ip": "10.0.2.72",
            "public_dns": "ec2-18-188-113-144.us-east-2.compute.amazonaws.com",
            "public_ip": "18.188.113.144",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "vpc-my-project-dev-us-east-2b",
              "environment": "dev",
              "project": "my-project"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:808449850312:internet-gateway/igw-0670e751de6110ce3",
            "id": "igw-0670e751de6110ce3",
            "owner_id": "808449850312",
            "tags": {
              "Name": "vpc-my-project-dev",
              "environment": "dev",
              "project": "my-project"
            },
            "vpc_id": "vpc-037b9abdea1038c8d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d3a379860a642c93",
            "id": "nat-05ba482435e256370",
            "network_interface_id": "eni-0d9ae27e0b85ad49f",
            "private_ip": "10.0.1.206",
            "public_ip": "3.20.95.111",
            "subnet_id": "subnet-0e9ea73ff8350af9f",
            "tags": {
              "Name": "vpc-my-project-dev-us-east-2a",
              "environment": "dev",
              "project": "my-project"
            }
          },
          "dependencies": [
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-094c5f4eb34815bde",
            "id": "nat-04a43cf1fe1b20c0d",
            "network_interface_id": "eni-02fd58355e4415cdc",
            "private_ip": "10.0.2.72",
            "public_ip": "18.188.113.144",
            "subnet_id": "subnet-004a18ddf192f0d93",
            "tags": {
              "Name": "vpc-my-project-dev-us-east-2b",
              "environment": "dev",
              "project": "my-project"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-04e8e0af83dfcc4b81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-05ba482435e256370",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04e8e0af83dfcc4b8",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-027a8af6aa19c4ce71080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-04a43cf1fe1b20c0d",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-027a8af6aa19c4ce7",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0670e751de6110ce3",
            "id": "r-rtb-0ed628a3e30a0e7901080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0ed628a3e30a0e790",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-04e8e0af83dfcc4b8",
            "owner_id": "808449850312",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05ba482435e256370",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-my-project-dev-private-us-east-2a",
              "environment": "dev",
              "project": "my-project"
            },
            "vpc_id": "vpc-037b9abdea1038c8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-027a8af6aa19c4ce7",
            "owner_id": "808449850312",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04a43cf1fe1b20c0d",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-my-project-dev-private-us-east-2b",
              "environment": "dev",
              "project": "my-project"
            },
            "vpc_id": "vpc-037b9abdea1038c8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0ed628a3e30a0e790",
            "owner_id": "808449850312",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0670e751de6110ce3",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "vpc-my-project-dev-public",
              "environment": "dev",
              "project": "my-project"
            },
            "vpc_id": "vpc-037b9abdea1038c8d"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bc1e90addada807",
            "route_table_id": "rtb-04e8e0af83dfcc4b8",
            "subnet_id": "subnet-0d283e8237730e503"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01101d2c3c902697b",
            "route_table_id": "rtb-027a8af6aa19c4ce7",
            "subnet_id": "subnet-08ac8e9365f96c74d"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0806b6705b7f755e9",
            "route_table_id": "rtb-0ed628a3e30a0e790",
            "subnet_id": "subnet-0e9ea73ff8350af9f"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0eaccb8d6c4ff090e",
            "route_table_id": "rtb-0ed628a3e30a0e790",
            "subnet_id": "subnet-004a18ddf192f0d93"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:808449850312:subnet/subnet-0d283e8237730e503",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0d283e8237730e503",
            "map_public_ip_on_launch": false,
            "owner_id": "808449850312",
            "tags": {
              "Name": "vpc-my-project-dev-private-us-east-2a",
              "environment": "dev",
              "project": "my-project"
            },
            "vpc_id": "vpc-037b9abdea1038c8d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:808449850312:subnet/subnet-08ac8e9365f96c74d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-08ac8e9365f96c74d",
            "map_public_ip_on_launch": false,
            "owner_id": "808449850312",
            "tags": {
              "Name": "vpc-my-project-dev-private-us-east-2b",
              "environment": "dev",
              "project": "my-project"
            },
            "vpc_id": "vpc-037b9abdea1038c8d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:808449850312:subnet/subnet-0e9ea73ff8350af9f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0e9ea73ff8350af9f",
            "map_public_ip_on_launch": true,
            "owner_id": "808449850312",
            "tags": {
              "Name": "vpc-my-project-dev-public-us-east-2a",
              "environment": "dev",
              "project": "my-project"
            },
            "vpc_id": "vpc-037b9abdea1038c8d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:808449850312:subnet/subnet-004a18ddf192f0d93",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-004a18ddf192f0d93",
            "map_public_ip_on_launch": true,
            "owner_id": "808449850312",
            "tags": {
              "Name": "vpc-my-project-dev-public-us-east-2b",
              "environment": "dev",
              "project": "my-project"
            },
            "vpc_id": "vpc-037b9abdea1038c8d"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:808449850312:vpc/vpc-037b9abdea1038c8d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c26178da32dbe759",
            "default_route_table_id": "rtb-0cfbe338bd36cef74",
            "default_security_group_id": "sg-0d174f2f26c65394e",
            "dhcp_options_id": "dopt-038399e8c6c88b986",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-037b9abdea1038c8d",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0cfbe338bd36cef74",
            "owner_id": "808449850312",
            "tags": {
              "Name": "vpc-my-project-dev",
              "environment": "dev",
              "project": "my-project"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}